k8s/apps/website-rs/routing/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vservice-website-rs-main
spec:
  hosts:
    - "tiny.pizza"
    - "dwbrite.com"
  gateways:
    - istio-system/dwbrite-com-gateway
    - istio-system/tiny-pizza-gateway
  http:
    - match:
        - uri:
          prefix: "/"
      redirect:
        httpsRedirect: true
    - route:
        - destination:
            host: website-rs-main
            subset: green
            port:
              number: 80

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vservice-website-rs-media
spec:
  hosts:
    - "media.tiny.pizza"
    - "media.dwbrite.com"
  gateways:
    - istio-system/dwbrite-com-gateway
    - istio-system/tiny-pizza-gateway
  http:
    - match:
        - uri:
          prefix: "/"
      redirect:
        httpsRedirect: true
    - route:
        - destination:
            host: website-rs-media
            subset: green
            port:
              number: 80
